testsuite/tests/rep-poly/RepPolyDoBody2.stderr

RepPolyDoBody2.hs:23:3: error:
    • The first argument of the rebindable syntax operator ‘(>>)’
        arising from a do statement
      does not have a fixed runtime representation.
      Its type is:
        mb0 :: TYPE c0
      Cannot unify ‘rep’ with the type variable ‘c0’
      because it is not a concrete ‘RuntimeRep’.
    • In a stmt of a 'do' block: undefined :: ()
      In the expression:
        do undefined :: ()
         return ()
      In an equation for ‘foo’:
          foo _
            = do undefined :: ()
               return ()
    • Relevant bindings include
        foo :: () -> ma (bound at RepPolyDoBody2.hs:22:1)
